--- a/checkout.css
+++ b/checkout.css
@@ -93,6 +93,7 @@ body p  {
 .logo{
     display: flex;
     align-items: center;
+    margin-left: 15px;
 }
 
 
@@ -139,22 +140,71 @@ body p  {
   
 }
 
+
 .user-cart{
     margin-left: 60px;
+    font-weight: bold;
+   
+}
+
+.user-cart a{
+    color: #00633f;
+    font-size: 25px;
    
 }
 
 .cart-items{
     display: flex;
-    gap:10px
+    text-align: center;
+    gap:40px
 }
 
 
 .user-cart i{
-    font-size: 20px;
+    font-size: 19px;
 }
 
-.user-cart a
+.login-btn,
+.cart-btn{
+    display: flex;
+    flex-direction: row;
+    text-align: center;
+}
+
+.login-btn{
+    display: flex;
+    gap: 8px;
+    text-align: center;
+    margin-top: 4px;
+}
+
+.login-btn p{
+    font-size: 15px;
+}
+
+.cart-icon{
+    position: relative;
+}
+
+
+
+.cart-quantity{
+    background-color: red;
+    color: white;
+    font-size: 14px;
+    font-weight: bold;
+    width: 18px;
+    height: 18px;
+    border-radius: 50%;
+    position: absolute;
+    margin-left: 16px;
+    padding-top: 1px;
+    top: 20px;
+    cursor: pointer;
+
+}
+
+
 
 
 *{
@@ -309,7 +359,7 @@ body p  {
 
 .total-cost{
     color: #00633f;
-    font-weight: bolder;
+    font-weight: bold;
 }
 
 .total-items, .shipping-title{
