--- a/cart.css
+++ b/cart.css
@@ -82,6 +82,7 @@ body p  {
     top: 30px;
     background-color: white;
     z-index: 100;
+    position: relative;
   
     
 }
@@ -200,42 +201,68 @@ body p  {
 
 }
 
-
-
-
-.slide-bar{
-    margin-top: 110px;
+.cart-banner{
+    display: flex;
+    flex-direction: row;
     height: 400px;
-    background-color: aquamarine;
-    transition: linear 2s;
-}
-.slide-bar img{
-    width: 100%;
-    height: 400px;
-   
-}
-
-.catagory-bar select{
-    margin-top: 20px;
-    margin-left: 50px;
-    background: transparent;
-    border: none;
-    background-color:rgb(214, 206, 206);
-    border-radius: 20%;
+    gap: 20px;
+    margin:40px 60px 0px 60px
     
 }
 
 
-.product-container{
-    margin: 30px 50px;
-    background-color: rgba(192, 192, 192, 0.091);
+.slide-bar{
+    transition: linear 2s;
 }
+.slide-bar img{
+    width: 100%;
+    height: 100%;
+    border-radius: 10px;
+  
+}
+
+.catagory-bar {
+    height: 400px;
+    width: 280px;
+    background-color:rgb(255, 255, 255);
+    border-radius: 10px;
+    border: 2px solid rgb(230, 230, 230);
+
+}
+
+.catagory-list{
+    margin: 10px 2px 2px 12px ;
+}
+
+.catagory-list  a{
+    text-decoration: none;
+    color: rgb(84, 84, 84);
+    font-size: 14px;
+}
+
+.catagory-list a:hover{
+    color: red;
+}
+
+.catagory-list li{
+    list-style: none;
+    margin-bottom: 12px;
+}
+
+.catagory-list i{
+    width: 20px;
+    margin-right: 1px;
+}
+
 
 
 .product-container{
     display: grid;
     grid-template-columns: repeat(6, 1fr);
     gap: 5px;
+    margin: 30px 50px;
+    background-color: rgba(192, 192, 192, 0.091);
+    
 }
 
 
