--- a/style/Home-page.css
+++ b/style/Home-page.css
@@ -19,6 +19,11 @@ body p  {
     cursor: pointer;
 }
 
+
+.main-container{
+    position: relative;
+}
+
 .topbar{
     font-size: 12px;
     color: rgba(255, 255, 255, 0.792);
@@ -82,9 +87,7 @@ body p  {
     top: 30px;
     background-color: white;
     z-index: 100;
-    position: relative;
-  
-    
+    position: fixed
 }
 
 
@@ -204,10 +207,10 @@ body p  {
 .cart-banner{
     display: flex;
     flex-direction: row;
-    height: 400px;
+    height: 350px;
     gap: 20px;
-    margin:40px 60px 0px 60px
-    
+    margin: 110px 60px 0px 60px;
+    position: relative;
 }
 
 
@@ -222,39 +225,59 @@ body p  {
 }
 
 .catagory-bar {
-    height: 400px;
-    width: 280px;
+    height: 100%;
+    width: 260px;
     background-color:rgb(255, 255, 255);
     border-radius: 10px;
     border: 2px solid rgb(230, 230, 230);
 
 }
 
-.catagory-list{
-    margin: 10px 2px 2px 12px ;
+.catagory-list, 
+.sub-catagory-list li{
+    margin: 10px 2px 0px 15px ;
 }
 
 .catagory-list  a{
     text-decoration: none;
-    color: rgb(84, 84, 84);
-    font-size: 14px;
+    color:#757575;
+    font-size: 13px;
 }
 
-.catagory-list a:hover{
-    color: red;
+.catagory-list li:hover{
+    background-color: #ebebeb;
 }
 
 .catagory-list li{
     list-style: none;
-    margin-bottom: 12px;
+    margin-bottom: 8px;
 }
+.catagory-list a:hover{
+    color: red;
+}
+
 
 .catagory-list i{
     width: 20px;
     margin-right: 1px;
 }
 
+.sub-catagory-list{
+    position: absolute;
+    width: 250px;
+    height: 100%;
+    top: 0px;
+    left: 250px;
+    background-color:rgb(255, 255, 255);
+    border-radius: 10px;
+    border: 2px solid rgb(230, 230, 230);
+    display: none;
 
+}
+
+.catagory-list li:hover .sub-catagory-list{
+    display: inline;
+}
 
 .product-container{
     display: grid;
@@ -264,7 +287,6 @@ body p  {
     background-color: rgba(192, 192, 192, 0.091);
     
 }
-
 
 
 
