--- a/style/Product-preview.css
+++ b/style/Product-preview.css
@@ -1,16 +1,217 @@
+*{
+    font-family: Arial, Helvetica, sans-serif;
+    box-sizing: border-box;
+    margin: 0;
+    padding: 0;
+    
+}
+
+body{
+    width: 100%;
+    height: 100vh;
+    
+   
+}
+
+body  button, 
+body i, 
+body p  {
+    cursor: pointer;
+}
+
+
+.main-container{
+    position: relative;
+}
+
+.topbar{
+    font-size: 12px;
+    color: rgba(255, 255, 255, 0.792);
+    width: 100%;
+    height: 30px;
+    background-color: #00633f;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    text-align: center;
+    position: fixed;
+    top: 0;
+    z-index: 200;
+    
+}
+
+.top-left{
+    margin-left: 50px;
+}
+
+.top-mid{
+    margin-left: 350px;
+    
+}
+
+
+.top-right{
+    display: flex;
+    justify-content: space-between;
+    margin-right: 50px;
+
+}
+
+.top-right-cos{
+    display: flex;
+    justify-content: space-between;
+}
+
+.top-right-cos p{
+ margin-right: 20px;
+}
+
+.right-seletebar select {
+    background: transparent;
+    border: none;
+    color: rgba(255, 255, 255, 0.792) ;
+    font-size: 12px;
+    
+}
+
+
+
+.header{
+    display: grid;
+    grid-template-columns: 300px 1fr 300px;
+    width: 100%;
+    height: 80px;
+    text-align: center;
+    align-items: center;
+    position: fixed;
+    top: 30px;
+    background-color: white;
+    z-index: 100;
+    position: fixed
+}
+
+
+.logo{
+    display: flex;
+    align-items: center;
+    margin-left: 15px;
+}
+
+
+.header .logo img{
+    background-color: transparent;
+    height: 50px;
+    margin-left: 10px;
+    
+}
+
+
+.logo h1{
+    color: #00633f;
+    font-weight: bold;
+    font-family: roboto;
+
+}
+
+.scerchbar{
+    display: flex;
+}
+
+
+.scerchbar input{
+    width: 100%;
+    padding-left: 10px;
+    height: 40px;
+    min-width: 300px;
+    border: none;
+    border-top-left-radius: 10px;
+    border-bottom-left-radius: 10px;
+    outline: none;
+    background-color: rgb(235, 230, 230);
+
+}
+
+.scerchbar button {
+    color: white;
+    width: 50px;
+    background-color: #00633f;
+    border: none;
+  
+}
+
+.user-cart{
+    margin-left: 60px;
+    font-weight: bold;
+   
+}
+
+.user-cart a{
+    color: #00633f;
+    font-size: 25px;
+   
+}
+
+.cart-items{
+    display: flex;
+    text-align: center;
+    gap:40px
+}
+
+
+.user-cart i{
+    font-size: 19px;
+}
+
+.login-btn,
+.cart-btn{
+    display: flex;
+    flex-direction: row;
+    text-align: center;
+}
+
+.login-btn{
+    display: flex;
+    gap: 8px;
+    text-align: center;
+    margin-top: 4px;
+}
+
+.login-btn p{
+    font-size: 15px;
+}
+
+.cart-icon{
+    position: relative;
+}
+
+
+
+.cart-quantity{
+    background-color: red;
+    color: white;
+    font-size: 14px;
+    font-weight: bold;
+    width: 18px;
+    height: 18px;
+    border-radius: 50%;
+    position: absolute;
+    margin-left: 16px;
+    padding-top: 1px;
+    top: 20px;
+    cursor: pointer;
+
+}
+
 .header a{
     text-decoration: none;
 }
 
-.header{
-    position: relative;
-}
 
 
 .product-preview{
     display: flex;
     gap: 20px;
-    margin: 30px 100px 10px 100px;
+    margin: 110px 100px 10px 100px;
 
 }
 
@@ -40,7 +241,9 @@
 }
 
 .image img{
-    height: 400px;
+    height: 350px;
+    width: 350px;
+    
 }
 
 .multi-image{
@@ -94,21 +297,86 @@
     display: flex;
     flex-direction: column;
     margin: 20px;
-    gap: 0px;
+    gap: 15px;
 }
 
 .product-name{
     font-size: 25px;
     font-weight: bold;
     color: #00633f;
+    border-bottom: 2px solid rgb(224, 224, 224);
+    padding-bottom: 20px;
 }
 
 .product-brand-size{
-    color: #00b7ff;
+    color: #1a9cb7;
+    font-weight: bold;
+    font-size: 14px;
 }
 
 .product-color-size{
     display: flex;
     flex-direction: row;
     gap: 10px;
+}
+
+.product-rating{
+    display: flex;
+    gap: 10px;
+    align-items: center;
+    text-align: center;
+}
+
+.rating-image img{
+    width: 80px;
+}
+
+.product-rating p{
+    font-weight: bold;
+    color: #1a9cb7;
+    font-size: 14px;
+}
+
+.product-Price{
+    font-size: 27px;
+    font-weight: bold;
+    color: #00633f;
+}
+
+.delivery-details{
+    display: flex;
+    flex-direction: column;
+    gap: 10px;  
+    font-size: 13px;
+}
+
+.delivery-details i{
+    color: rgb(78, 78, 78);
+}
+
+.delivery-time,
+.cash-on-delivery{
+    display: flex;
+    gap: 10px;
+    font-size: 13px;
+}
+
+.delivery-cost{
+    font-size: 15px;
+    font-weight: bold;
+}
+
+.product-description{
+    margin-top: 20px;
+}
+
+.product-des-table li{
+    margin-bottom: 7px;
+    margin-left: 20px;
+}
+
+.product-description p{
+    font-size: 20px;
+    font-weight: bold;
+    margin-bottom: 15px;
 }
