--- a/style/Product-preview.css
+++ b/style/Product-preview.css
@@ -211,6 +211,7 @@ body p  {
 .product-preview{
     display: flex;
     margin: 110px 100px 10px 100px;
+    border-bottom: 2px solid rgb(224, 224, 224);
 
 }
 
@@ -290,7 +291,6 @@ body p  {
 .product-details-container{
     height: 640px;
     width: 100%;
-    border: 2px solid rgb(234, 234, 234);
 }
 
 .product-details{
@@ -379,4 +379,119 @@ body p  {
     font-size: 20px;
     font-weight: bold;
     margin-bottom: 15px;
+}
+
+
+/*Related Product css */
+.related-product-container{
+    display: flex;
+    flex-direction: column;
+    gap: 20px;
+    margin: 50px 50px 20px 50px;
+}
+
+
+.related-products{
+    display: grid;
+    grid-template-columns: repeat(5, 1fr);
+    gap: 5px;
+     margin: 30px 50px;
+}
+
+.related-product-header{
+    margin-left: 50px;
+    color: #757575;
+}
+
+
+/* products css*/
+
+
+.related-products-item{
+    display: flex;
+    flex-direction: column;
+    gap: 7px;
+    font-size: 14px;
+    background-color: white;
+    padding: 4px 15px 15px 15px ;
+    margin-bottom: 15px;
+}
+
+
+.related-products-photo{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    height: 180px;
+    margin-bottom:  20px;
+    
+}
+
+.related-products-photo img{
+    max-height: 100%;
+    max-width: 100%;  
+}
+
+
+.related-products-name{
+    height: 40px;
+}
+
+.related-products-price{
+    font-weight: bold;
+    font-size: 20px;
+}
+
+.related-products-rating img{
+    height: auto;
+    margin: 0 auto;
+    max-height: 60%;
+    max-width: 60%;
+    width: auto;
+}
+
+.addToCart-btn {
+    width: 100%;
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    align-items: center;
+    justify-content: center;
+    gap: 10px;
+}
+
+
+.addToCart-btn button{
+    width: 100%;
+    padding: 8px;
+    border-radius: 50px;
+    cursor: pointer;
+}
+
+.added-btn{
+    display: flex;
+    gap: 5px;
+    justify-content: center;
+    align-items: center;
+    opacity: 0;
+}
+
+.addCart-btn-visibility{
+    opacity: 1;
+    transform: none;
+}
+
+.added-btn img{
+    height: 22px;
+}
+
+.addToCart-btn .addCart-btn :hover{
+    background-color: #00633f;
+    border: none;
+    font-weight: bold;
+    color: white;
+
+}
+
+.related-products-item:hover{
+    box-shadow: 0 3px 6px 0 rgba(0, 0, 0, 0.2), 0 3px 6px 0 rgba(0, 0, 0, 0.15);
 }
