--- a/style/Product-preview.css
+++ b/style/Product-preview.css
@@ -347,7 +347,7 @@ body p  {
     display: flex;
     flex-direction: column;
     gap: 10px;  
-    font-size: 13px;
+    font-size: 14px;
 }
 
 .delivery-details i{
@@ -357,12 +357,13 @@ body p  {
 .delivery-time,
 .cash-on-delivery{
     display: flex;
+    align-items: center;
     gap: 10px;
     font-size: 13px;
 }
 
 .delivery-cost{
-    font-size: 15px;
+    font-size: 16px;
     font-weight: bold;
 }
 
