--- a/style/Home-page.css
+++ b/style/Home-page.css
@@ -1,213 +1,9 @@
-*{
-    font-family: Arial, Helvetica, sans-serif;
-    box-sizing: border-box;
-    margin: 0;
-    padding: 0;
-    
-}
-
-body{
-    width: 100%;
-    height: 100vh;
-    
-   
-}
-
-body  button, 
-body i, 
-body p  {
-    cursor: pointer;
-}
-
-
-.main-container{
-    position: relative;
-}
-
-.topbar{
-    font-size: 12px;
-    color: rgba(255, 255, 255, 0.792);
-    width: 100%;
-    height: 30px;
-    background-color: #00633f;
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-    text-align: center;
-    position: fixed;
-    top: 0;
-    z-index: 200;
-    
-}
-
-.top-left{
-    margin-left: 50px;
-}
-
-.top-mid{
-    margin-left: 350px;
-    
-}
-
-
-.top-right{
-    display: flex;
-    justify-content: space-between;
-    margin-right: 50px;
-
-}
-
-.top-right-cos{
-    display: flex;
-    justify-content: space-between;
-}
-
-.top-right-cos p{
- margin-right: 20px;
-}
-
-.right-seletebar select {
-    background: transparent;
-    border: none;
-    color: rgba(255, 255, 255, 0.792) ;
-    font-size: 12px;
-    
-}
-
-
-
-.header{
-    display: grid;
-    grid-template-columns: 300px 1fr 300px;
-    width: 100%;
-    height: 80px;
-    text-align: center;
-    align-items: center;
-    position: fixed;
-    top: 30px;
-    background-color: white;
-    z-index: 100;
-    position: fixed
-}
-
-
-.logo{
-    display: flex;
-    align-items: center;
-    margin-left: 15px;
-}
-
-
-.header .logo img{
-    background-color: transparent;
-    height: 50px;
-    margin-left: 10px;
-    
-}
-
-
-.logo h1{
-    color: #00633f;
-    font-weight: bold;
-    font-family: roboto;
-
-}
-
-.scerchbar{
-    display: flex;
-}
-
-
-.scerchbar input{
-    width: 100%;
-    padding-left: 10px;
-    height: 40px;
-    min-width: 300px;
-    border: none;
-    border-top-left-radius: 10px;
-    border-bottom-left-radius: 10px;
-    outline: none;
-    background-color: rgb(235, 230, 230);
-
-}
-
-.scerchbar button {
-    color: white;
-    width: 50px;
-    background-color: #00633f;
-    border: none;
-  
-}
-
-.user-cart{
-    margin-left: 60px;
-    font-weight: bold;
-   
-}
-
-.user-cart a{
-    color: #00633f;
-    font-size: 25px;
-   
-}
-
-.cart-items{
-    display: flex;
-    text-align: center;
-    gap:40px
-}
-
-
-.user-cart i{
-    font-size: 19px;
-}
-
-.login-btn,
-.cart-btn{
-    display: flex;
-    flex-direction: row;
-    text-align: center;
-}
-
-.login-btn{
-    display: flex;
-    gap: 8px;
-    text-align: center;
-    margin-top: 4px;
-}
-
-.login-btn p{
-    font-size: 15px;
-}
-
-.cart-icon{
-    position: relative;
-}
-
-
-
-.cart-quantity{
-    background-color: red;
-    color: white;
-    font-size: 14px;
-    font-weight: bold;
-    width: 18px;
-    height: 18px;
-    border-radius: 50%;
-    position: absolute;
-    margin-left: 16px;
-    padding-top: 1px;
-    top: 20px;
-    cursor: pointer;
-
-}
-
 .cart-banner{
     display: flex;
     flex-direction: row;
     height: 350px;
     gap: 20px;
-    margin: 110px 60px 0px 60px;
+    margin: 120px 60px 0px 60px;
     position: relative;
 }
 
@@ -283,8 +79,8 @@ body p  {
     grid-template-columns: repeat(6, 1fr);
     gap: 5px;
     margin: 30px 50px;
-    background-color: rgba(192, 192, 192, 0.091);
-    
+    background-color: white;
+    border-top: 2px solid rgb(224, 224, 224);
 }
 
 
@@ -306,6 +102,7 @@ body p  {
     justify-content: center;
     height: 180px;
     margin-bottom:  20px;
+    cursor: pointer;
     
 }
 
@@ -391,7 +188,7 @@ body p  {
     flex-direction: column;
     gap: 15px;
     margin: 30px 50px;
-    background-color:#daebe53f;
+    
 }
 
 
@@ -437,7 +234,9 @@ body p  {
     width: 100%;
     display: flex;
     align-items: center;
-    overflow-x: auto
+    overflow-x: auto;
+    gap: 5px;
+    background-color: white;
 }
 
 .sell-items::-webkit-scrollbar{
