--- a/style/Product-preview.css
+++ b/style/Product-preview.css
@@ -1,217 +1,22 @@
-*{
-    font-family: Arial, Helvetica, sans-serif;
-    box-sizing: border-box;
-    margin: 0;
-    padding: 0;
-    
-}
-
 body{
-    width: 100%;
-    height: 100vh;
-    
-   
+    background: white;
 }
-
-body  button, 
-body i, 
-body p  {
-    cursor: pointer;
-}
-
-
-.main-container{
-    position: relative;
-}
-
-.topbar{
-    font-size: 12px;
-    color: rgba(255, 255, 255, 0.792);
-    width: 100%;
-    height: 30px;
-    background-color: #00633f;
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-    text-align: center;
-    position: fixed;
-    top: 0;
-    z-index: 200;
-    
-}
-
-.top-left{
-    margin-left: 50px;
-}
-
-.top-mid{
-    margin-left: 350px;
-    
-}
-
-
-.top-right{
-    display: flex;
-    justify-content: space-between;
-    margin-right: 50px;
-
-}
-
-.top-right-cos{
-    display: flex;
-    justify-content: space-between;
-}
-
-.top-right-cos p{
- margin-right: 20px;
-}
-
-.right-seletebar select {
-    background: transparent;
-    border: none;
-    color: rgba(255, 255, 255, 0.792) ;
-    font-size: 12px;
-    
-}
-
-
-
-.header{
-    display: grid;
-    grid-template-columns: 300px 1fr 300px;
-    width: 100%;
-    height: 80px;
-    text-align: center;
-    align-items: center;
-    position: fixed;
-    top: 30px;
-    background-color: white;
-    z-index: 100;
-    position: fixed
-}
-
-
-.logo{
-    display: flex;
-    align-items: center;
-    margin-left: 15px;
-}
-
-
-.header .logo img{
-    background-color: transparent;
-    height: 50px;
-    margin-left: 10px;
-    
-}
-
-
-.logo h1{
-    color: #00633f;
-    font-weight: bold;
-    font-family: roboto;
-
-}
-
-.scerchbar{
-    display: flex;
-}
-
-
-.scerchbar input{
-    width: 100%;
-    padding-left: 10px;
-    height: 40px;
-    min-width: 300px;
-    border: none;
-    border-top-left-radius: 10px;
-    border-bottom-left-radius: 10px;
-    outline: none;
-    background-color: rgb(235, 230, 230);
-
-}
-
-.scerchbar button {
-    color: white;
-    width: 50px;
-    background-color: #00633f;
-    border: none;
-  
-}
-
-.user-cart{
-    margin-left: 60px;
-    font-weight: bold;
-   
-}
-
-.user-cart a{
-    color: #00633f;
-    font-size: 25px;
-   
-}
-
-.cart-items{
-    display: flex;
-    text-align: center;
-    gap:40px
-}
-
-
-.user-cart i{
-    font-size: 19px;
-}
-
-.login-btn,
-.cart-btn{
-    display: flex;
-    flex-direction: row;
-    text-align: center;
-}
-
-.login-btn{
-    display: flex;
-    gap: 8px;
-    text-align: center;
-    margin-top: 4px;
-}
-
-.login-btn p{
-    font-size: 15px;
-}
-
-.cart-icon{
-    position: relative;
-}
-
-
-
-.cart-quantity{
-    background-color: red;
-    color: white;
-    font-size: 14px;
-    font-weight: bold;
-    width: 18px;
-    height: 18px;
-    border-radius: 50%;
-    position: absolute;
-    margin-left: 16px;
-    padding-top: 1px;
-    top: 20px;
-    cursor: pointer;
-
-}
-
 .header a{
     text-decoration: none;
 }
 
+.product-url{
+    margin-top: 120px;
+    margin-left: 100px;
+
+}
 
 
 .product-preview{
     display: flex;
-    margin: 110px 100px 10px 100px;
+    margin: 20px 100px 10px 100px;
     border-bottom: 2px solid rgb(224, 224, 224);
+    background-color: #fff;
 
 }
 
@@ -233,29 +38,33 @@ body p  {
 .product-image .image{
     display: flex;
     flex-direction: column;
-    height: 490px;
-    width: 430px;
+    height: 420px;
+    width: 420px;
     align-items: center;
     justify-content: center;
     border:  2px solid rgb(234, 234, 234);
     margin-right: 6px;
+    overflow: hidden;
 }
+
 
 .image img{
     height: 350px;
     width: 350px;
-    
+    transition: all ease 0.1s;
+}
+
+.image:hover img{
+    scale: 1.4;
 }
 
 .multi-image{
     display: flex;
     flex-direction: column;
-    gap: 8px;
+   justify-content: space-between;
     height: 420px;
     width: 70px;
     border: 2px solid rgb(234, 234, 234);
-    margin-top: 10px;
-
 }
 
 .multi-image img{
@@ -269,12 +78,11 @@ body p  {
 .product-btn{
     display: flex;
     flex-direction: row;
-    gap: 10px;
-    margin-left: 10px;
+    gap: 20px;
 }
 
 .product-btn button{
-    width: 200px;
+    width: 235px;
     height: 50px;
     color: white;
     font-weight: bold;
@@ -296,7 +104,7 @@ body p  {
 .product-details{
     display: flex;
     flex-direction: column;
-    margin: 20px;
+    margin-left: 20px;
     gap: 15px;
 }
 
@@ -389,6 +197,7 @@ body p  {
     flex-direction: column;
     gap: 20px;
     margin: 50px 50px 20px 50px;
+    background-color: #fff;
 }
 
 
@@ -396,12 +205,14 @@ body p  {
     display: grid;
     grid-template-columns: repeat(5, 1fr);
     gap: 5px;
-     margin: 30px 50px;
+    margin: 30px 50px;
+    border-top: 1px solid rgb(224, 224, 224);
 }
 
 .related-product-header{
     margin-left: 50px;
     color: #757575;
+    margin-top: 20px;
 }
 
 
