--- a/style/Home-page.css
+++ b/style/Home-page.css
@@ -5,6 +5,7 @@
     gap: 20px;
     margin: 120px 60px 0px 60px;
     position: relative;
+    
 }
 
 
@@ -85,104 +86,10 @@
 
 
 
-.product-item{
-    display: flex;
-    flex-direction: column;
-    gap: 7px;
-    font-size: 14px;
-    background-color: white;
-    padding: 4px 15px 15px 15px ;
-    margin-bottom: 15px;
-}
-
-
-.product-photo{
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    height: 180px;
-    margin-bottom:  20px;
-    cursor: pointer;
-    
-}
-
-.product-photo img{
-    max-height: 100%;
-    max-width: 100%;  
-}
-
-
-.product-name{
-    height: 40px;
-}
-
-.product-price{
-    font-weight: bold;
-    font-size: 20px;
-}
-
-.product-rating img{
-    height: auto;
-    margin: 0 auto;
-    max-height: 60%;
-    max-width: 60%;
-    width: auto;
-}
-
-.addToCart-btn {
-    width: 100%;
-    display: grid;
-    grid-template-columns: 1fr 1fr;
-    align-items: center;
-    justify-content: center;
-    gap: 10px;
-}
-
-
-
-.addToCart-btn button{
-    width: 100%;
-    padding: 8px;
-    border-radius: 50px;
-    cursor: pointer;
-}
-
-.added-btn{
-    display: flex;
-    gap: 5px;
-    justify-content: center;
-    align-items: center;
-    opacity: 0;
-}
-
-.addCart-btn-visibility{
-    opacity: 1;
-    transform: none;
-}
-
-
-
-.added-btn img{
-    height: 22px;
-}
-
-
-
-.addToCart-btn .addCart-btn :hover{
-    background-color: #00633f;
-    border: none;
-    font-weight: bold;
-    color: white;
-
-}
-
-.product-item:hover{
-    box-shadow: 0 3px 6px 0 rgba(0, 0, 0, 0.2), 0 3px 6px 0 rgba(0, 0, 0, 0.15);
-}
 
 .just-for-you{
     color: #757575;
-    margin-left: 50px;
+    margin-left: 50px; 
 }
 
 /* load more navigation button */
@@ -261,6 +168,7 @@
     overflow-x: auto;
     gap: 5px;
     background-color: white;
+    position: relative;
 }
 
 .sell-items::-webkit-scrollbar{
@@ -303,22 +211,76 @@
    
 }
 
-
-
-header p span{
-    font-size: 40px;
-    margin: 0 5px;
-    cursor: pointer;
-    color: #555;
-     width: 30px;
-    height: 30px;
-    display: inline-block;
-    line-height: 19px;
-    text-align: center;
-    border-radius: 3px;
+header{
+    position: absolute;
+    top: 600px;
 }
 
-header p span:hover{
-    background: #222;
+header p{
+    display: flex;
+    gap: 1200px;
+}
+
+header p span{
+    display: flex;
+    align-items: center;
+    font-size: 70px;
+    cursor: pointer;
     color: white;
+    width: 30px;
+    height: 70px;
+    background-color: #7575754e;
+    padding-bottom: 20px;
+    
+}
+
+/* Fashion Top Deals */
+
+.fashion-product-container{
+    display: flex;
+    margin: 30px 50px;
+    gap: 10px;
+    border: 2px solid  rgb(224, 224, 224);
+    background-color: white;
+}
+
+.Fashion-title{
+    padding: 5px;
+    color: #00633f;
+    margin-left: 10px;
+    text-align: center;
+    font-weight: bold;
+    
+}
+
+
+.fashion-deals-product{
+    height: 650px;
+    display: grid;
+    grid-template-columns: repeat(3,1fr);
+    gap: 20px;
+    background-color: white;
+    margin-left: 10px;
+    height: 580px;
+}
+
+.fashion-deals-banner{
+    height: 650px;
+    width: 600px;
+    background-color: rgb(192, 192, 192);
+   
+}
+
+
+.fashion-deals-product .product-item{
+    border: 1px solid  rgb(224, 224, 224);
+    margin: 8px 0 8px 0;
+    font-size: 16px;
+    width: 200px;
+  
+}
+
+.fashion-deals-product #dis-pertenage{
+    color: #00633f;
+    font-weight: bold;
 }
