--- a/style/products.css
+++ b/style/products.css
@@ -33,12 +33,19 @@
     font-size: 20px;
 }
 
+.product-rating{
+    display: flex;
+    gap: 5px;
+    align-items: center;
+}
+
 .product-rating img{
-    height: auto;
-    margin: 0 auto;
     max-height: 60%;
     max-width: 60%;
-    width: auto;
+}
+.product-rating-count{
+    font-size: 11px;
+    color:#757575;
 }
 
 .addToCart-btn {
