--- a/style/Home-page.css
+++ b/style/Home-page.css
@@ -267,8 +267,12 @@ header p span{
 .fashion-deals-banner{
     height: 650px;
     width: 600px;
-    background-color: rgb(192, 192, 192);
-   
+    background-color: rgb(228, 228, 228);
+}
+
+.fashion-deals-banner img{
+    width: 100%;
+    height: inherit;
 }
 
 
