--- a/style/Home-page.css
+++ b/style/Home-page.css
@@ -271,8 +271,8 @@ header p span{
 }
 
 .fashion-deals-banner img{
-    width: 100%;
-    height: inherit;
+    width: 600px;
+    height: 650px;
 }
 
 
