--- a/style/footer.css
+++ b/style/footer.css
@@ -1,9 +1,85 @@
 .footer-container{
     width: 100%;
-    height: 200px;
-    margin-top: 50px;
-    background-color: #e8e8e8;
+    height: 260px;
+    padding: 0 50px 0 50px;;
     font-size: 50px;
     text-align: center;
-    color: #757575;
+    position: relative;
+    margin-top: 50px;
+    background-color: #00633f;
+}
+
+.footer-content{
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    gap: 20px;
+    padding: 30px;
+}
+
+.footer-content div{
+    font-size: 15px;
+    text-align: left;
+    color: white;
+}
+
+.footer-content a{
+    color: white;
+    list-style: none;
+    text-decoration: none;
+    line-height: 25px;
+    transition: all 0.5s;
+} 
+
+.footer-content a:hover {
+    color: rgb(171, 171, 171);
+}
+
+.footer-content li{
+    list-style: none;
+}
+
+.footer-container h4{
+    font-size: 20px;
+    margin-bottom: 20px;
+}
+
+.Payment-Methods-section{
+    width: 200px;
+    height: 30px;
+    margin-right: 5px;
+}
+
+.Payment-Methods-section img{
+    width: 40px;
+    height: 35px;
+    border: 1px solid rgb(210, 210, 210);
+    background-color: white;
+    padding: 2px;
+}
+
+.copyright{
+    font-size: 15px;
+    color: black;
+    float: right;
+}
+
+
+.social-media-icon .icons{
+    display: flex;
+    gap: 10px;
+}
+
+.social-media-icon img{
+    width: 25px;
+}
+
+
+.Apps-download-section{
+    margin-top: 20px;
+}
+
+.Apps-download-section img{
+    width: 80px;
+    height: 30px;
 }
