--- a/style/sign-in.css
+++ b/style/sign-in.css
@@ -16,8 +16,24 @@
     padding: 20px;
     border: 2px solid  rgb(224, 224, 224);
 }
+
+.sign-in-form #number-error{
+    color: red;
+    font-size: 14px;
+    display: none;
+}
+
+.sign-in-form h1,
+.sign-in-form h3{
+    text-align: center;
+    color: #00633f;
+}
+.sign-in-form h1{
+    font-size: 25px;    
+}
 .user-number{
     padding-left: 10px;
+    margin-top: 20px;
 }
 
 .sign-in-form:nth-child(2){
@@ -73,3 +89,54 @@
     background-color: white;
     border: 1px solid  rgb(184, 184, 184);
 }
+
+.google-signIn:hover, 
+.facebook-signIn:hover{
+    background-color: rgb(239, 239, 239);
+}
+
+
+/* Sign up form css*/
+
+.sign-Up-from{
+    display: flex;
+    flex-direction: column;
+    gap: 15px;
+    margin-top: 10px;
+}
+
+.sign-Up-from input{
+    height: 40px;
+    padding-left: 15px;
+}
+.Input-filed{
+    display: flex;
+    position: relative;
+}
+.Input-filed input{
+    width: 100%;
+}
+
+.Input-filed span{
+    position: absolute;
+    text-align: center; 
+    right: 17px;
+    bottom: 14px;
+    color: red;
+    font-size: 14px;
+    font-weight: bold;
+
+}
+
+.sign-Up-from .otp-message{
+    font-size: 15px;
+    color: #00633f;
+    font-weight: bold;
+    margin-top: 15px;
+}
+.sign-Up-from .sign-up-btn{
+    background-color: #00633f;
+    color: white;
+    border: none;
+}
+
